--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   padding: 2rem;
   border-radius: 5px;
   width: 90%;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   text-align: center;
 }
 
